[package]
name = "hc-gtk"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.5.2", package = "gtk4", features = ["v4_8"]}
adw = { version = "0.2.1", package = "libadwaita" }

#form_selector = { path = "../form_selector" }
#hoplite_verbs_rs = { path = "../hoplite_verbs_rs" }
form_selector = { git = "https://github.com/jeremymarch/form_selector", version = "0.3.1" }
hoplite_verbs_rs = { git = "https://github.com/jeremymarch/hoplite_verbs_rs", version = "0.3.7" }
